--- a/style.css
+++ b/style.css
@@ -570,6 +570,20 @@ iframe{
   left:50%;
   transform: translate(-50%,-50%);
 }
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 
 
@@ -822,4 +836,3 @@ iframe{
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Adjust based on your design */
   gap: 10px;
 }
-
