--- a/style.css
+++ b/style.css
@@ -564,25 +564,14 @@ footer ul li a:hover {
 
 
 /*------------live-feed-------------*/
-iframe{
-  position:absolute;
-  top:80%;
-  left:50%;
-  transform: translate(-50%,-50%);
-}
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
-  height: 0;
-  overflow: hidden;
-}
-
-.video-container iframe {
+iframe {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 80%;
+  left: 50%;
+  width: 80%; /* Adjust the width as needed */
+  height: 45vw; /* Adjust the height as needed */
+  max-width: 800px; /* Set a maximum width if desired */
+  transform: translate(-50%, -50%);
 }
 
 
