--- a/logreg.css
+++ b/logreg.css
@@ -11,7 +11,7 @@
 body {
   font-family: 'Familjen Grotesk', sans-serif;
   background: #000;
-  color: #4f1c1c;
+  color: #fb2b2b;
 }
 
 a {
@@ -636,4 +636,19 @@ footer ul li a:hover {
 .error-message {
   color: #ff0000;
   margin-top: 10px;
+}
+
+
+/*==============*/
+.g-signin2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.g-signout2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
